--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -30,12 +30,12 @@ jobs:
       security-events: write
 
     strategy:
-      fail-fast: false
-      matrix:
-        language: ['csharp', 'cpp', 'javascript']
-        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
-        # Learn more:
-        # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
+  fail-fast: false
+  matrix:
+    # Override automatic language detection by changing the list below
+    # Supported options are:
+    # ['csharp', 'cpp', 'go', 'java', 'javascript', 'python']
+    language: ['go', 'javascript']
 
     steps:
     - name: Initialize CodeQL
